--- a/js/ui/app/web/index.html
+++ b/js/ui/app/web/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Tagonize</title>
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/4.1.0/css/fabric.min.css">
   </head>
   <body>
     <div id="root"></div>
