--- a/js/ui/app/web/index.html
+++ b/js/ui/app/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Barter</title>
+    <title>Investreck</title>
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
