--- a/js/ui/app/web/index.html
+++ b/js/ui/app/web/index.html
@@ -7,7 +7,7 @@
   <body>
     <div id="root"></div>
 
-    <script src="vendor.bundle.js"></script>
-    <script src="app.bundle.js"></script>
+    <script src="/vendor.bundle.js"></script>
+    <script src="/app.bundle.js"></script>
   </body>
 </html>
