add meta tag to html to support currency signs

--- a/js/ui/app/web/index.html
+++ b/js/ui/app/web/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Investrackr</title>
     <meta name="viewport" content="width=device-width">
+    <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   </head>
   <body>
     <div id="root"></div>
