--- a/js/ui/app/web/index.html
+++ b/js/ui/app/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Investrackr</title>
+    <title>Cryptosis</title>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   </head>
