--- a/js/ui/app/web/index.html
+++ b/js/ui/app/web/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Cryptosis</title>
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <meta name="robots" content="index,all,follow" />
     <meta name="googlebot" content="index,all,follow" />
